
// 账本链上通用数据结构定义

// 关于金额声明：
//      1. 金额和利率存储精确到小数点后6位
//      2. 金额和利率存储为int64类型,直接*1000,000

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package domain;
option java_package = "com.xiangna.www.core.domain";

// 机构摘要
message CommercialOrgVo{
    string no = 1;                                      // 机构编号
    string name = 2;                                    // 机构名称
    string type = 3;                                    // 机构类型(供应商,核心企业,保理公司,银行)
}

// 用户信息
message UserInfo{
    string user_no = 1;                                 // 用户编号
    string user_name = 2;                               // 用户名称
    string user_mobile = 3;                             // 用户手机号
    CommercialOrgVo user_org = 4;                       // 用户所属机构

    // 上层业务定义的角色,入参时用角色名称代替(比如：经办)
    string user_role = 5;                               // 用户角色(可选)
}

// 数据操作信息
message OperateInfo {
    // 创建者操作信息
    UserInfo create_user = 1;                           // 创建者
    google.protobuf.Timestamp create_time = 2;          // 创建时间
    string create_ip = 3;                               // 创建者IP

    // 更新者操作信息
    UserInfo last_user = 4;                             // 最新更新者
    google.protobuf.Timestamp last_time = 5;            // 最新更新时间
    string last_ip = 6;                                 // 最新更新者IP
}

// 银行账户信息
message OrgBankAccount{
    string account = 1;                                 // 银行账户
    string bank_name = 2;                               // 银行名称
    string bank_branch = 3;                             // 银行分行
}

// 机构联系人
message OrgContactPerson{
    string name = 1;                                    // 联系人姓名
    string telephone = 2;                               // 联系电话
    string email = 3;                                   // 邮箱
}

// 机构信息
message CommercialOrg{
    string no = 1;                                      // 机构编号
    string name = 2;                                    // 机构名称
    string type = 3;                                    // 机构类型(供应商,核心企业,保理公司,银行)

    // 如果三证合一只需要填写统一社会信用代码
    string org_code = 4;                                // 机构代码或统一社会信用代码
    string registed_no = 5;                             // 工商营业执照编号
    string tax_registration_certificate_no = 6;         // 税务登记证编号

    // 机构基本信息
    string org_corporate = 7;                           // 机构法人代表
    repeated OrgContactPerson contact_person = 8;       // 机构联系人
    string introduction = 9;                            // 机构简介
    string register_address = 10;                       // 注册地址
    string current_address = 11;                        // 当前机构地址
    string telephone = 12;                              // 联系电话
    string email = 13;                                  // 邮箱
    string org_category = 14;                           // 机构所属行业分类

    // 三方账本时:
    //           供应商维护两个账户
    //           核心企业维护一个还款账户到结算账户
    //           保理公司维护两个账户:一个放款账户到结算账户,一个收还款账户
    // 双方账本时：
    //           保理公司维护两个账户
    //           保理公司维护两个账户:一个放款账户到结算账户,一个收还款账户
    OrgBankAccount settlement_account = 15;             // 结算账户
    OrgBankAccount policy_account = 16;                 // 保理账户
    repeated LedgerFile org_files = 17;                 // 机构相关文件存放
    OperateInfo operate_info = 18;                      // 数据操作信息

}

// 账本链上文件
message LedgerFile{
    string url = 1;                                     // 文件地址
    bytes data = 2;                                     // 文件数据
    string sha256 = 3;                                  // 文件的sha256值
    string name = 4;                                    // 文件名称
    int64 size = 5;                                     // 文件大小
    string type = 6;                                    // 文件类型
    OperateInfo operate_info = 7;                       // 数据操作信息
}

// 供应商发票信息
message Invoice{
    string invoice_no = 1;                              // 发票编号
    int64 invoice_amount = 2;                           // 应收账款发票金额
    google.protobuf.Timestamp invoice_time = 3;         // 开票日期
    CommercialOrgVo supplier = 4;                       // 销售方
    CommercialOrgVo enterprise = 5;                     // 购买方
    string remark = 6;                                  // 备注
    repeated LedgerFile notes = 7;                      // 发票扫描件(图)
    OperateInfo operate_info = 8;                       // 数据操作信息
}

// 一张发票的融资信息
message FinancingInvoice{
    Invoice invoice = 1;                                // 供应商发票信息
    int64 expect_amount = 2;                            // 申请融资金额
    int64 confirm_amount = 3;                           // 审核确认可融资金额
    int64 confirm_rate = 4;                             // 融资利率
    google.protobuf.Timestamp confirm_pay_time = 5;     // 保理融资发放日期
    google.protobuf.Timestamp confirm_return_time = 6;  // 应收账款还款日期
    google.protobuf.Timestamp confirm_end_time = 7;     // 保理融资到期日期
    string confirm_rate_desc = 8;                       // 利息计收方式
    string confirm_urge_return_desc = 9;                // 应收账款催收方式
}

// 融资申请单操作日志
message OrderOperationLog{
    UserInfo operator = 1;                              // 操作员
    string operation_action = 2;                        // 用户操作行为记录
    string from_ip = 3;                                 // 操作IP
    google.protobuf.Timestamp operate_time = 4;         // 操作时间
}

// 订单款项转移金额流水
message OrderTransactionDetail{
    CommercialOrgVo expenses = 1;                       // 支出方信息
    int64 expenses_amount = 2;                          // 支出金额
    OrgBankAccount expenses_account = 3;                // 支出账户

    CommercialOrgVo income = 4;                         // 收入方信息
    OrgBankAccount income_account = 6;                  // 收入方账户
    string tansaction_remark = 7;                       // 交易备注
    repeated LedgerFile tansaction_notes = 8;           // 交易票据(图)
    google.protobuf.Timestamp tansaction_time = 9;      // 交易时间

    bool incom_confirm = 10;                            // 收入方确认
    OperateInfo operate_info = 11;                      // 数据操作信息
}









