syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/xncc/protos/common";
option java_package = "com.xiangna.www.protos.common";

package protos;

// 调用 cc 返回的数据格式定义(通用)
message ChainCodeResponse {
    // 状态编码定义:
    // 0 = 成功
    // !0 = 失败错误码定义
    //      1000 = 参数格式错误
    //      1001 = 未知方法错误
    //      1002 = protobuf数据转换错误
    //      4004 = 数据不存在错误
    //      5000 = cc服务执行错误
    //      可以根据具体业务新增错误编码,编码格式统一定义在6000以后
    int32 code = 1; // 状态编码
    string message = 2; // 状态编码具体错误描述
    bytes result = 3; // 返回数据

}

// 机构摘要
message AppVo {
    string appId = 1; // 应用ID
    string appName = 2; // 机构名称
    string type = 3; // 机构类型(供应商,核心企业,保理公司,银行)
}

// 数据操作信息
message OperateInfo {
    // 创建操作信息
    AppVo creater = 1; // 创建者
    google.protobuf.Timestamp create_time = 2; // 创建时间
    string creater_ip = 3; // 创建者IP

    // 更新操作信息
    AppVo last_user = 4; // 最新更新者
    google.protobuf.Timestamp last_time = 5; // 最新更新时间
    string last_ip = 6; // 最新更新者IP
}

// 账本链上文件
message LedgerFile {
    string url = 1; // 文件地址
    string sha256 = 2; // 文件的sha256值
    string name = 3; // 文件名称
    int64 size = 4; // 文件大小
    string type = 5; // 文件类型
    bool isEncrypted = 6; // 是否加密
    repeated string appIds = 7; // 可解密appid
    OperateInfo operate_info = 8; // 数据操作信息
}

// 账本链上文件流
// key = LedgerFile#sha256
message LedgerFileData {
    string key = 1; // 文件的sha256值
    bytes data = 2; // 文件数据
}

// 文件列表
// 用于查询单独返回文件列表
message LedgerFileList {
    repeated LedgerFile files = 1;
}

// 银行账户信息
message OrgBankAccount {
    string account = 1; // 银行账户
    string bank_name = 2; // 银行名称
    string bank_branch = 3; // 银行分行
}