syntax = "proto3";

option go_package = "github.com/xncc/protos/contract";
option java_package = "com.xiangna.www.protos.contract";

package protos;

// 执行合约请求参数
message ContractExcuteRequest {
    string action = 1; // 操作
    string no = 2; // 合约编号
    bytes contractData = 3; // 合约数据
}

// 合约新增审批日志请求参数
message ContractAddCheckLogRequest {
    string no = 1; // 合约编号

    // refer message contract.ContractCheckFlowData
    bytes contractCheckFlowData = 2; // 审批日志

}

// 合约查询请求参数
message ContractQueryRequest {
    string no = 1; // 合约编号

    // 查询类型
    enum QueryType {
        ALL = 0;
        FILE = 1;

    }

    QueryType type = 2;
    string fileKey = 3; // 查询文件的key
}